nambah file html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <td class="right">23:59</td>
                 </tr>
                 <tr>
-                    <td>CSR: MANTAN</td>
+                    <td>CSR: KISSTIANNN</td>
                     <td class="right">#143</td>
                 </tr>
                 <tr>
@@ -263,7 +263,7 @@
                 </tr>
                 <tr>
                     <td class="qty">∞</td>
-                    <td class="item-name">Coklat Terusss<br><small>(Fav Nyom)</small></td>
+                    <td class="item-name">Coklat Terusss<br><small>(Fav Nyom-Nyom)</small></td>
                     <td class="price">Happy</td>
                 </tr>
                 <tr>
